Bug 436687 - Folder Properties Dialog is broken
Summary: Folder Properties Dialog is broken
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 5.16.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-06 13:36 UTC by David C. Bryant
Modified: 2021-05-07 05:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.2
Sentry Crash Report:


Attachments
Folder Properties Dialog with changes made. (81.69 KB, image/png)
2021-05-06 13:36 UTC, David C. Bryant
Details
Folder Properties Dialog when I reopn it after saving the first one. (148.81 KB, image/png)
2021-05-06 13:39 UTC, David C. Bryant
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David C. Bryant 2021-05-06 13:36:55 UTC
Created attachment 138189 [details]
Folder Properties Dialog with changes made.

SUMMARY
Folder Properties Dialog (View tab) doesn't preserve the changes I make.

STEPS TO REPRODUCE
1. Open the "Folder Properties" dialog.
2. Change something, like "Show Column", or "Use Default Aggregation".
3. Close the dialog, then open it again.

OBSERVED RESULT
KMail ignores the changes Ihave made. The defaults have been reimposed.

EXPECTED RESULT
The changed values should have been applied, and should still be there.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
This used to work correctly. I suspect the recent upgrade to 5.16.3 from 5.16.2 broke something. I'm using Gentoo packages, and compiling KMail from source. See attached screenshorts, showing first the changes I made, and then that KMail forgot them immediately.
Comment 1 David C. Bryant 2021-05-06 13:39:37 UTC
Created attachment 138190 [details]
Folder Properties Dialog when I reopn it after saving the first one.
Comment 2 David C. Bryant 2021-05-06 13:50:25 UTC
Looking at my screenshots again, it's only the "USe Default Aggregation" check box that doesn't work. I have also played with the "Theme" check box. The same thing happens there. I cannot customize either "Aggregation" or "Theme". The other options uncer "View" seem to be OK.
Comment 3 Laurent Montel 2021-05-07 05:02:12 UTC
Git commit a91ee8b0a7338e25e87c93940997aa1861537a0a by Laurent Montel.
Committed on 07/05/2021 at 05:01.
Pushed by mlaurent into branch 'release/21.04'.

Fix Bug 436687 - Folder Properties Dialog is broken

FIXED-IN: 5.17.2

M  +1    -0    src/collectionpage/collectionviewwidget.cpp

https://invent.kde.org/pim/mailcommon/commit/a91ee8b0a7338e25e87c93940997aa1861537a0a