Fix Bug 436687 - Folder Properties Dialog is broken

FIXED-IN: 5.17.2
BUG: 436687